# RxISM

./: CMakeLists.txt  CMakeMypkg.cmake
etc/: known_vfs_patch.json  note.md
etc/SistersEnToJP_Mod/: xmake.lua  xmake_open_vs.bat
etc/SistersEnToJP_Mod/src/: ism_sjis_hook.cpp  ism_sjis_loader.cpp
src/: CMakeLists.txt
src/src/ReVN/RxISM/Core/: ISA.cpp  ISA.h  ISM.cpp  ISM.h  ISM_Struct.h
src/src/ReVN/RxISM/Hook/: VFS_Hook.cpp  VFS_Hook.h  VFS_Patch.cpp  VFS_Patch.h
test/: CMakeLists.txt  main.cpp
test/ISA_Test/: CMakeLists.txt  main.cpp
test/ISM_Test/: CMakeLists.txt  main.cpp
test/VFS_Hook_Test/: CMakeLists.txt  dllmain.cpp
test/VFS_Patch_Test/: CMakeLists.txt
